tests/error/comptime/check_slice_construction22.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different subobjects of the same element in this allocation
// note: begin address points to a subobject at offset 0
// note: end address points to a subobject at offset 4
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc([i32, i32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [i32, i32]());

		__builtin_slice_from_ptrs(&(*p)[0], &(*p)[1]);
	});
}
